# citd_scraper

./: .gitignore  README.md  app.py  main.py  process_local.py  pyproject.toml  requirements.txt  run_app.sh  run_scraper.sh  scraper.py  test_cloudscraper.py  test_extraction.py  thongbaochung.html  thongbaohocvu.html
models/: ThongBao.py
services/: scraper.py  scraper_service.py
settings/: settings.py
test/: test_cf.py  test_content.py  test_drission.py
tests/: thongbaocuthe.html
thongbao/: thongbao.json
thongbao/chung/: 2021-07-02-17-22-33-thong-bao-ve-viec-cham-do-an-tot-nghiep-lop-cn2-k25-hcd-15.json  2021-07-02-17-22-33-thong-bao-ve-viec-cham-do-an-tot-nghiep-lop-cn2-k25-hcd-15.md  2021-07-08-23-15-02-thong-bao-chinh-thuc-ve-viec-cham-do-an-lop-cn2-k25-hcd-15.json  2021-07-08-23-15-02-thong-bao-chinh-thuc-ve-viec-cham-do-an-lop-cn2-k25-hcd-15.md  2021-07-22-13-21-13-thong-bao-ve-viec-dong-hoc-phi.json  2021-07-22-13-21-13-thong-bao-ve-viec-dong-hoc-phi.md  2021-08-06-18-08-53-ve-viec-cap-nhat-lich-thi-cac-lop.json  2021-08-06-18-08-53-ve-viec-cap-nhat-lich-thi-cac-lop.md  2021-08-24-14-12-38-thu-moi-le-khai-giang-lop-cu-nhan-cong-nghe-thong-tin-he-tu-xa-dot-1-2021.json  2021-08-24-14-12-38-thu-moi-le-khai-giang-lop-cu-nhan-cong-nghe-thong-tin-he-tu-xa-dot-1-2021.md  2021-08-28-16-29-07-bieu-do-ke-hoach-dao-tao-nam-hoc-2021-2022.json  2021-08-28-16-29-07-bieu-do-ke-hoach-dao-tao-nam-hoc-2021-2022.md  2021-10-21-16-24-11-ve-viec-xet-tot-nghiep.json  2021-10-21-16-24-11-ve-viec-xet-tot-nghiep.md  (+114 more)
utils/: helpers.py  migrate_assets_local.py  network.py
(+382 files in other folders)
