[project]
name = "citd-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "drissionpage>=4.1.1.2",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "pandas>=2.3.3",
    "python-slugify>=8.0.4",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "watchdog>=6.0.0",
]
